# splurge-unittest-to-pytest

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README-PRECOMMIT.md  README.md  analysis_results.txt  demo_configurable_api.py  demo_flexible_parameters.py  example_unittest.pytest.py  false_positive_comments.py  import_only.py  mypy.ini  pyproject.toml  requirements-dev.txt  test-config.yaml  test_debug_imports.py  test_detection_comparison.py  test_example.py  test_stage1_complete.py  tmp_test.py  true_unittest.py  true_unittest.py.backup  unittest_given_09.txt  unittest_given_31.txt
.cursor/rules/: cli-standards.mdc  design-standards.mdc  documentation-standards.mdc  method-standards.mdc  naming-standards.mdc  project-standards.mdc  python-standards.mdc  sdlc-standards.mdc  security-standards.mdc  style-standards.mdc  testing-standards.mdc
.github/: copilot-instructions.md
.github/workflows/: ci-lint-and-typecheck.yml  ci-py310.yml  ci-py311.yml  ci-py312.yml  ci-py313.yml  ci-quality-check.yml  ci-quality-checks.yml  ci-quick-checks.yml  ci-quick-test.yml  ci-test-matrix.yml  ci-test.yml  ci.yml  coverage.yml  pr-debug-tests.yml  update-coverage-badge.yml  upload-diagnostics.yml
analysis_output/: unittest_given_05_analysis.json  unittest_given_31_analysis.json  unittest_given_40_analysis.json  unittest_given_42_analysis.json  unittest_given_61_analysis.json  unittest_given_64_analysis.json
contrib/: legacy_converter.py
docs/: README-DETAILS.md  README-Details.md  README-ENHANCEMENTS-2025.0.5.md  config-degradation-settings.md  config-import-handling.md  config-parametrize-settings.md  config-test-method-patterns.md  config-transformation-settings.md  golden-tests.md  intentional-bad-test-data.md  issue-u2p.md  issues-u2p-2025-sep-12-a copy.md  issues-u2p-2025-sep-12-a.md  issues-u2p-2025-sep-12-b copy.md  issues-u2p-2025-sep-12-b.md  issues-u2p-2025-sep-12-c.md  issues-u2p-2025-sep-12-d.md  issues-u2p-2025-sep-12-e.md  issues-u2p-2025-sep-14-a.md  issues-u2p-2025-sep-14-b.md  issues-u2p-2025-sep-14-c.md  issues-u2p-2025-sep-14-d.md  issues-u2p-2025-sep-14-e.md  issues-u2p-2025-sep-14-f.md  plan-2025-09-09-01.md  plan-2025-09-13-01.md  plan-decompose-generator.md  plan-fix-generator-2025-09-14.md  plan-generator-refactor-2025-09-13.md  plan-remediation-2025-09-14-b.md  plan-remediation-2025-sep-12-a.md  plan-remediation-2025-sep-12-c.md  plan-simplification-2025-09-12.md  spec-api-simplification-2025-09-12.md  tests-goldens-2025-09-13.md  usage-json-diff.md
docs/analysis/: accuracy_comparison_decision_model_vs_original.md
docs/api/: README.md  cli_mapping.md  configuration_api.md  end_to_end_workflow.md  programmatic_api.md
docs/configuration/: README.md  config-advanced-options.md  config-output-settings.md  config-processing-options.md  config_schema.json  config_schema.md
docs/developer/: mypy-overrides.md
docs/issues/: exception-audit-report-2025-10-03.md  issue-brittleness-analysis-2025-10-03.md  issue-test-triage-2025-09-19.md  issue-u2p-duplicate.md  issue-u2p.md  issues-u2p-2025-sep-12-a copy.md  issues-u2p-2025-sep-12-a.md  path-handling-audit-report-2025-10-03.md
docs/plan/: plan-improve-testing-2025-10-05.md
docs/plans/: implementation_roadmap.md  plan-2025-09-13-01.md  plan-add-testcase-coverage.md  plan-assert-transformer-refactor-2025-09-30.md  plan-assertion-rewriter-step-pilot-2025-09-19.md  plan-cli-migrate-wrapper.md  plan-configuration-validation-and-error-reporting-2025-10-04.md  plan-implement-steps-2025-09-19.md  plan-implemention-review-2025--09-17.md  plan-implemention-review-2025-09-17.md  plan-improvements-implementation-2025-10-03.md  plan-multi-pass-transformer-2025-10-01.md  plan-phase-2-implementation-complete-2025-10-02.md  plan-remediate-brittleness-2025-10-02.md  plan-remediate-brittleness-high-priority-2025-10-03.md  plan-remediate-brittleness-medium-priority-2025-10-03.md  plan-review-2025-09-17.md  project_plan.md  (+9 more)
examples/: README.md  api_basic.py  basic_usage.py  cli_basic.py  cli_json_diff_example.py  cli_usage.py  demo_flexible_parameters.py  example_config_flow.py
reports/: coverage.xml  junit.xml
scripts/: analyze_existing_tests.py  benchmark_decision_model_integration.py  debug_decision_model.py  debug_transform_21.py  debug_transform_steps.py  generate_config_docs.py  generate_expected_6x.py  generate_expected_for_new_cases.py  inspect_cst_09.py  inspect_transform_09.py  inspect_transform_09_dry.py  inspect_try_nodes.py  print_conversion_demo.py  run_alias_test.py
splurge_unittest_to_pytest/: __init__.py  __main__.py  circuit_breaker.py  cli.py  cli_adapters.py  cli_helpers.py  config_docs_generator.py  config_metadata.py  config_validation.py  context.py  converter.py  decision_model.py  degradation.py  error_reporting.py  events.py  exceptions.py  io_helpers.py  ir.py  main.py  migration_orchestrator.py  pattern_analyzer.py  pipeline.py  plugins.py  print_diagnostics.py  reporting.py  result.py  sentinel_discovery.py  types.py
test-templates/: basic_migration.yaml  ci_integration.yaml  custom_framework.yaml  development_debugging.yaml  enterprise_deployment.yaml  production_deployment.yaml
test_docs/: config-transform-selection.md  configuration-reference.md
tests/: __init__.py  conftest.py  hypothesis_config.py  test_misc_0001.py  test_misc_001.py  test_utils.py
tmp_migrate/: unittest_given_31.txt
tmp_migrate_caplog_31/: unittest_given_31.txt
tmp_migrate_new_34/: unittest_given_34.txt
tmp_migrate_regen_33/: unittest_given_33.txt
tmp_migrate_verify_32/: unittest_given_32.txt
tools/: annotate_test_domains.py  check_generated.py  cleanup_consolidated_imports.py  convert_bak.py  debug_collect.py  debug_generator.py  debug_generator_v2.py  fix_import_placement.py  fix_inlined_collisions.py  fix_leading_headers.py  generate_python_badge.py  inline_consolidated.py  move_domains.py  print_diagnostics.py  rename_tests.py  rename_tests_by_domains.py  repair_consolidated.py  strip_legacy_comparisons.py  update_coverage_badge.py  update_goldens_from_samples.py
(+1226 files in other folders)
